syntax = "proto3";

option go_package = "github.com/ShowyQuasar88/proj-combine/omsv2/common/api";

package api;

message Order {
    string ID = 1;
    string CustomerID = 2;
    string Status = 3;
    Item Items = 4;
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message ItemsWithQuantity {
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string CustomerID = 1;
    repeated ItemsWithQuantity Items = 2;
}

message CreateOrderResponse {
    Order Order = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}